Add feature, see the README

--- a/README
+++ b/README
@@ -14,5 +14,8 @@ use https://github.com/cheahjs/palworld-save-tools.git
 
 Clean the data:
 Download https://github.com/cheahjs/palworld-save-tools.git
-Put auto-cleaner.py in palworld-save-tools directory
-Run auto-cleaner.py in SaveGames/0/<Server ID> folder
+Put palworld-cleanup-tools.py in palworld-save-tools directory
+Run palworld-cleanup-tools.py in SaveGames/0/<Server ID> folder
+
+Interactive feature:
+python3 -i palworld-cleanup-tools.py SaveGames/0/<SID>/Level.sav
